--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 <header>
   <div class="header-top">
     <div class="logo-wrap">
-      <img src="SRC-logo.png" alt="SRC logo" class="logo-img">
+      <img src="ttrl-logo.png" alt="SRC logo" class="logo-img">
       <div class="header-left-text">
         <h1 id="leagueTitle">SRC Multi-Season Statistics</h1>
         <p id="raceDayLine">Choose race date to view:</p>
@@ -667,8 +667,8 @@ window.currentExportFilename = '';
 window.currentDriverName = '';
 
 const EXPORT_FILES = [
-  { value: 'export_data/sunday_races.json', label: 'Sunday races' },
-  { value: 'export_data/wed_races.json',    label: 'Wednesday races' }
+  { value: 'export_data/src_f1.json', label: 'SRC F1' },
+    { value: 'export_data/src_f2.json', label: 'SRC F2' }
 ];
 
 function getDriverAvatarSrc(driverName) {
