--- a/index.html
+++ b/index.html
@@ -577,6 +577,9 @@
                 <th>Pts</th>
                 <th>Races</th>
                 <th>Wins</th>
+              <th>Start</th>
+              <th>End</th>
+              <th>Status</th>
                 <th>Podiums</th>
               </tr>
             </thead>
@@ -710,6 +713,17 @@ function buildPage(data) {
   const info = multi.multiSeasonInfo || {};
   const driversSrc = multi.drivers || multi.driverStatistics || data.drivers || [];
   const tracksSrc = multi.tracks || multi.trackStatistics || data.tracks || [];
+
+  // Create season metadata lookup
+  const seasonMetaByName = {};
+  (multi.seasons || []).forEach(s => {
+    seasonMetaByName[s.name] = {
+      startDate: s.startDate || '',
+      endDate: s.endDate || '',
+      status: s.isCompleted ? 'Completed' : (s.isStarted ? 'In Progress' : 'Not Started')
+    };
+  });
+  window.seasonMetaByName = seasonMetaByName;
 
   formatLoadedMeta(meta);
 
@@ -960,6 +974,9 @@ function buildPage(data) {
       const tr = document.createElement('tr');
       tr.innerHTML =
         '<td>' + (sr.seasonName || '') + '</td>' +
+        '<td>' + ((window.seasonMetaByName || {})[sr.seasonName] || {}).startDate + '</td>' +
+        '<td>' + ((window.seasonMetaByName || {})[sr.seasonName] || {}).endDate + '</td>' +
+        '<td>' + ((window.seasonMetaByName || {})[sr.seasonName] || {}).status + '</td>' +
         '<td>' + (sr.position || '') + '</td>' +
         '<td>' + (sr.points || 0) + '</td>' +
         '<td>' + (sr.racesCount || 0) + '</td>' +
