--- a/driver-summary.html
+++ b/driver-summary.html
@@ -476,8 +476,15 @@ function renderDriverSummary(name) {
     const lineParts = [];
     lineParts.push(eventsVal + ' events');
     lineParts.push((s.points || 0) + ' pts');
+    if (seasonMeta.startDate || seasonMeta.endDate) {
+      lineParts.push((seasonMeta.startDate || '?') + ' – ' + (seasonMeta.endDate || '?'));
+    }
+    if (seasonMeta.status) {
+      lineParts.push(seasonMeta.status);
+    }
     metaLine.innerHTML = lineParts.map(x => '<span>' + x + '</span>').join('');
     left.appendChild(metaLine);
+    const seasonMeta = ((window.seasonMetaByName || {})[s.seasonName] || {});
 
     rowDiv.appendChild(left);
 
@@ -508,6 +515,17 @@ function loadJsonFromStored(initialDriverName) {
     .then(r => r.json())
     .then(data => {
       const multi = data.multiSeasonStatistics || {};
+
+    // Create season metadata lookup
+    const seasonMetaByName = {};
+    (multi.seasons || []).forEach(s => {
+      seasonMetaByName[s.name] = {
+        startDate: s.startDate || '',
+        endDate: s.endDate || '',
+        status: s.isCompleted ? 'Completed' : (s.isStarted ? 'In Progress' : 'Not Started')
+      };
+    });
+    window.seasonMetaByName = seasonMetaByName;
       driversSrc = multi.drivers || multi.driverStatistics || data.drivers || [];
       driverRowsAll = driversSrc.map(deriveDriverRow);
       renderDriverList('');
