Fix seasonMetaByName scope issue - use window.seasonMetaByName
The seasonMetaByName variable is created inside buildPage() but renderDriverCard() is defined outside that scope. Changed line 976 to use window.seasonMetaByName to access the global reference that was set on line 818. This fixes the JavaScript error that was preventing the race file dropdown from populating.

--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@ function buildPage(data) {
     seasonsResults.forEach(sr => {
       const tr = document.createElement('tr');
       tr.innerHTML =
-              const meta = seasonMetaByName[sr.seasonName] || {};
+              const meta = window.seasonMetaByName[sr.seasonName] || {};
         '<td>' + (sr.seasonName || '') + '</td>' +
         '<td>' + (sr.position || '') + '</td>' +
         '<td>' + (sr.points || 0) + '</td>' +
