--- a/index.html
+++ b/index.html
@@ -432,10 +432,10 @@
       <img src="ttrl-logo.png" alt="SRC logo" class="logo-img">
       <div class="header-left-text">
         <h1 id="leagueTitle">SRC Multi-Season Statistics</h1>
-        <p id="raceDayLine">Choose race date to view:</p>
+        <p id="raceDayLine">Choose race day to view:</p>
         <div>
           <select id="fileSelect">
-            <option value="">Select race date…</option>
+            <option value="">Select race day…</option>
           </select>
         </div>
       </div>
